# stockfish-trainer

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  Cargo.toml  README.md  bench_forward.py  config.py  flake.nix  pyproject.toml  train.py  verify_moe.py
python/stockfish_trainer/: __init__.py
python/tests/: test_all.py
src/: lib.rs
src/data/: __init__.py  device.py  loader.py
src/distributed/: README.md  __init__.py  config.py  feeder.py  metrics.py  pipeline.py  smoke.py
src/model/: __init__.py  config.py  model.py  quantize.py
src/model/modules/: __init__.py  config.py  layer_stacks.py  moe_stacks.py  sparse_expert_linear.py  stacked_linear.py
src/model/modules/feature_transformer/: __init__.py  cuembed.py  cuembed_wrapper.cu  functions.py  kernel.py
src/model/modules/features/: __init__.py  composed.py
src/ranger22/: __init__.py  baseline.py  optimizer.py
src/raytest/: README.md  run.py  slurm_raytest.sbatch
src/rust/: feature_extraction.rs  lib.rs  pipeline.rs  python_bridge.rs
src/rust/python/rust/: __init__.py
src/scripts/: __init__.py  bench_bwd.py  bench_fwd.py  bench_gpu.py  bench_kernel_bwd.py  bench_kernel_fwd.py  bench_loader.py  check_cuembed_sparse_linear.py  oracle_headroom.py  puzzle_pass_rate_chart.py  serialize.py  slurm_multinode_h100.sbatch  slurm_multinode_smoke.sbatch  slurm_worker_encode_smoke.sbatch
src/train/: __init__.py  common.py  config.py  distributed.py  log.py  multinode.py  router.py  singlenode.py
