[package]
name = "stockfish-trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_internal"
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
sfbinpack = "0.6.2"
crossbeam-channel = "0.5"
rand = { version = "0.8", features = ["small_rng"] }
