[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "stockfish-trainer"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch",
  "lightning",
  "tyro",
  "torchmetrics",
  "python-chess==0.31.4",
  "numpy<2.0",
  "wandb",
  "ray>=2.55.0",
]

[tool.maturin]
python-source = "src/rust/python"
module-name = "rust._internal"
